--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 .idea/google-java-format.xml
 .idea/compiler.xml
 .idea/.name
+.idea/vcs.xml
+.idea/uiDesigner.xml
+.idea/misc.xml
+.idea/libraries/Java_EE_6_Java_EE_6.xml
+.idea/google-java-format.xml
+.idea/compiler.xml
+.idea/.name
